# cmake-project

./: .gitignore
myProject/: CMakeLists.txt
